fix display issues on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,7 +45,7 @@ main {
   align-items: center;
   justify-content: center;
   min-width: 100vw;
-  height: calc(100vh - 65px);
+  min-height: calc(100vh - 65px);
 }
 
 main section {
@@ -149,6 +149,16 @@ section [data-parties] {
 
 main .on-screen {
   animation: fade-in 0.3s;
+}
+
+@media screen and (max-width: 450px) {
+  main {
+    min-height: auto;
+  }
+
+  main section {
+    max-width: 100vw;
+  }
 }
 
 @media screen and (min-width: 850px) {
